# ml-colab-agentic

./: .editorconfig  .gitignore  AGENT_MISSIONS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COLAB_GPU_GUIDE.md  CONTRIBUTING.md  DOCS_REORGANIZATION_COMPLETE.md  GITHUB_PUSH_INSTRUCTIONS.md  GITHUB_SETTINGS_GUIDE.md  NEXT_STEPS.md  PROJECT_STATUS_DASHBOARD.md  QUICK_REFERENCE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: run-notebook.yml
checkpoints/: .gitkeep
data/: README.md
docs/: QUICK_START.md  README.md  STRUCTURE.md
docs/missions/: FIRST_MISSION.md
docs/setup/: FINAL_CHECKLIST.md  SETUP_COMPLETE.md
notebooks/: 01_train.ipynb
outputs/: .gitkeep
runs/2025-01-01_00-00_example_dataset_example_model/: cfg.yaml  logs.txt  metrics.csv
src/: utils.py
tests/: test_smoke.py
