[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-colab-agentic"
version = "0.1.0"
description = "A reusable template for ML projects on Colab with Copilot Agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I", "UP"]
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  ".ipynb_checkpoints",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
python_files = "test_*.py"
